# advent-of-code-2025

./: .bazelrc  .clang-format  .gitignore  LICENSE  MODULE.bazel  README.md
2015/: BUILD.bazel  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp
2024/: BUILD.bazel  day1.cpp
2025/: BUILD.bazel  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
bzl/: aoc.bzl
demo/: BUILD.bazel  hello.cpp
prelude/: BUILD.bazel  prelude.hpp  prelude_test.cpp
util/: BUILD.bazel  util.hpp
