cc_library(
    name = "prelude",
    hdrs = ["prelude.hpp"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "prelude_test",
    size = "small",
    srcs = ["prelude_test.cpp"],
    deps = [
        ":prelude",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)